--- a/web-app/src/app/contact-list/contact-list.component.html
+++ b/web-app/src/app/contact-list/contact-list.component.html
@@ -1,27 +1,27 @@
 <div class="container mt-4">
     <h1>Contacts</h1>
-    <button class="btn btn-primary mb-3">Add New Contact</button>
+    <button class="btn btn-primary mb-3">Contacts</button>
         <table class="table table-striped">
         <thead>
             <tr>
-            <th>Name</th>
-            <th>Surname</th>
-            <th>Telephone Number</th>
-            <th>Email Address</th>
-            <th>Date of Birth</th>
-            <th>Actions</th>
+                <th>Name</th>
+                <th>Surname</th>
+                <th>Telephone Number</th>
+                <th>Email Address</th>
+                <th>Date of Birth</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
-            <tr >
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+            <tr *ngFor="let contact of contacts">
+                <td>{{ contact.name }}</td>
+                <td>{{ contact.surname }}</td>
+                <td>{{ contact.telephoneNumber }}</td>
+                <td>{{ contact.emailAddress }}</td>
+                <td>{{ contact.dateOfBirth }}</td>
                 <td>
-                    <button class="btn btn-sm btn-warning d-none">Edit</button>
-                    <button class="btn btn-sm btn-danger d-none">Delete</button>
+                    <button (click)="edit_contact(contact)">Edit</button>
+                    <button (click)="delete_contact(contact?.id)">Delete</button>
                 </td>
             </tr>
         </tbody>
