--- a/web-app/src/app/contact-list/contact-list.component.html
+++ b/web-app/src/app/contact-list/contact-list.component.html
@@ -1,6 +1,6 @@
 <div class="container mt-4">
     <h1>Contacts</h1>
-    <button class="btn btn-primary mb-3">Contacts</button>
+    <button class="btn btn-primary mb-3" (click)="add_contacts()">Add Contact</button>
         <table class="table table-striped">
         <thead>
             <tr>
@@ -20,8 +20,8 @@
                 <td>{{ contact.emailAddress }}</td>
                 <td>{{ contact.dateOfBirth }}</td>
                 <td>
-                    <button (click)="edit_contact(contact)">Edit</button>
-                    <button (click)="delete_contact(contact?.id)">Delete</button>
+                    <button class="btn btn-primary me-2" (click)="edit_contact(contact)">Edit</button>
+                    <button class="btn btn-danger me-2" (click)="delete_contact(contact?.id)">Delete</button>
                 </td>
             </tr>
         </tbody>
