--- a/web-app/src/app/contact-list/contact-list.component.html
+++ b/web-app/src/app/contact-list/contact-list.component.html
@@ -21,7 +21,7 @@
                 <td>{{ contact.dateOfBirth }}</td>
                 <td>
                     <button class="btn btn-primary me-2" (click)="edit_contact(contact)">Edit</button>
-                    <button class="btn btn-danger me-2" (click)="delete_contact(contact?.id)">Delete</button>
+                    <button class="btn btn-danger me-2" (click)="delete_contact(contact)">Delete</button>
                 </td>
             </tr>
         </tbody>
